tests/negative/undefined_var2.sans
// expect-error: undefined variable
main() I {
  x = some_undefined_var
  x
}
